--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="image.jpeg" alt="First slide">
+      <img class="d-block w-100" src="images.jpeg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="image.(7).jpeg" alt="Second slide">
+      <img class="d-block w-100" src="images(7).jpeg" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="..." alt="Third slide">
