--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
       <img class="d-block w-100" src="images.jpeg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images(7).jpeg" alt="Second slide">
+      <img class="d-block w-100" src=" Screenshot_20210320-222957_1.png" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide">
+      <img class="d-block w-100" src="images.jpeg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
